[package]
name = "ch11-fledgeos"
version = "0.1.0"
authors = ["Nathan Brown <nathan@nkbrown.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "<=0.9.18"
x86_64 = "<=0.14.0"

[package.metadata.bootimage]
build-command = ["build"]

run-command = [
    "qemu-system-x86_64", "-drive", "format=raw,file={}", "-display", "gtk,grab-on-hover=off"
]
